--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,8 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-transition-group": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
