--- a/tracker/tracker.csproj
+++ b/tracker/tracker.csproj
@@ -27,4 +27,8 @@
     <PackageReference Include="Spectre.Console" Version="0.44.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
