--- a/web/package.json
+++ b/web/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "better-sqlite3": "^7.5.3",
     "chart.js": "^3.8.0",
     "primeflex": "^3.2.1",
     "primeicons": "^5.0.0",
