--- a/WindowsBuild/api/appsettings.json
+++ b/WindowsBuild/api/appsettings.json
@@ -7,6 +7,16 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Sqlite": "Data Source=C:\\Users\\karit\\OneDrive\\source\\repos\\GameTracker\\tracker\\bin\\Release\\net6.0\\tracker.db"
+    "Sqlite": "Data Source=../tracker.db"
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:42425"
+      },
+      "Https": {
+        "Url": "https://localhost:42426"
+      }
+    }
   }
 }
