Updated api settings

--- a/TrackerApi/appsettings.json
+++ b/TrackerApi/appsettings.json
@@ -8,5 +8,15 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Sqlite": "Data Source=C:\\Users\\karit\\OneDrive\\source\\repos\\GameTracker\\tracker\\bin\\Release\\net6.0\\tracker.db"
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:42425"
+      },
+      "Https": {
+        "Url": "https://localhost:42426"
+      }
+    }
   }
 }
